[gd_scene load_steps=17 format=2]

[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Left Arm with Sword v2.png" type="Texture" id=1]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Legs.png" type="Texture" id=2]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Head.png" type="Texture" id=3]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Right Arm with Sword v2.png" type="Texture" id=4]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Torso.png" type="Texture" id=5]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Knot.png" type="Texture" id=6]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Back Hoodie.png" type="Texture" id=7]
[ext_resource path="res://Chars/New Dusttrust Sans/Sans.gd" type="Script" id=8]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Head1.png" type="Texture" id=9]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Head2.png" type="Texture" id=10]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Head3.png" type="Texture" id=11]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Left Arm.png" type="Texture" id=12]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Right Arm.png" type="Texture" id=13]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Left Arm With Open Hand.png" type="Texture" id=14]
[ext_resource path="res://Chars/New Dusttrust Sans/Sprites/Right Arm With Open Hand.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Sans" type="Position2D"]
position = Vector2( 316, 299 )
scale = Vector2( 2, 2 )
script = ExtResource( 8 )

[node name="Legs" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -25, -24 )

[node name="Torso" type="Sprite" parent="Legs"]
position = Vector2( 0, -21 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -17, -30 )

[node name="BackHoodie" type="Sprite" parent="Legs/Torso"]
position = Vector2( -9, 0.5 )
z_index = -1
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -2 )

[node name="Head" type="AnimatedSprite" parent="Legs/Torso"]
position = Vector2( 1, -25 )
frames = SubResource( 1 )
centered = false
offset = Vector2( -16, -28 )

[node name="LeftArm" type="Position2D" parent="Legs/Torso"]
position = Vector2( -15, -21 )
z_index = -1

[node name="Down" type="Sprite" parent="Legs/Torso/LeftArm"]
texture = ExtResource( 12 )
offset = Vector2( -5.5, 9 )

[node name="Sword" type="Sprite" parent="Legs/Torso/LeftArm"]
visible = false
position = Vector2( -1, -3 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -47, -27 )

[node name="Open" type="Sprite" parent="Legs/Torso/LeftArm"]
visible = false
position = Vector2( -25, -9 )
texture = ExtResource( 14 )
centered = false

[node name="RightArm" type="Position2D" parent="Legs/Torso"]
position = Vector2( 16, -21 )
z_index = -1

[node name="Down" type="Sprite" parent="Legs/Torso/RightArm"]
texture = ExtResource( 13 )
centered = false
offset = Vector2( -3, -9 )

[node name="Sword" type="Sprite" parent="Legs/Torso/RightArm"]
visible = false
position = Vector2( 0, -3 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -3, -27 )

[node name="Open" type="Sprite" parent="Legs/Torso/RightArm"]
visible = false
position = Vector2( -3, -9 )
texture = ExtResource( 15 )
centered = false

[node name="Knot" type="Sprite" parent="Legs/Torso"]
position = Vector2( 0, -4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -5, -3 )
